--- a/.config.json
+++ b/.config.json
@@ -896,7 +896,7 @@
   "admin": {
    "editor": {
     "view": {
-     "view-grid-size": 20,
+     "view-grid-size": "20",
      "view-node-status": true,
      "view-show-tips": true,
      "view-snap-grid": true,
