--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "node-red-contrib-md5": "^1.0.4",
         "node-red-contrib-play-audio": "^2.3.1",
         "node-red-contrib-spark": "^2.0.5",
+        "node-red-contrib-string": "~0.2.2",
         "node-red-dashboard": "^2.9.6",
         "node-red-node-ping": "0.0.15",
         "node-red-node-random": "^0.1.0",
