--- a/.config.json
+++ b/.config.json
@@ -922,7 +922,7 @@
    },
    "menu-deploymenu-item-node": false,
    "menu-deploymenu-item-full": true,
-   "menu-menu-item-sidebar": true
+   "menu-menu-item-sidebar": false
   }
  }
 }
